force-app/main/default/objects/Engagement__c/Engagement__c.object-meta.xml
<CustomObject>
    <label>Engagement</label>
    <nameField>
        <displayFormat>EM - {0000}</displayFormat>
        <label>Engagement  Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>