force-app/main/default/objects/Engagement__c/fields/Architect__c.field-meta.xml
<CustomField>
    <fullName>Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Architect</label>
    <referenceTo>Architect__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>