force-app/main/default/objects/Engagement__c/fields/Date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date and time</label>
    <type>DateTime</type>
</CustomField>