force-app/main/default/objects/Engagement__c/fields/Influencer_Type__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Type__c</fullName>
    <label>Influencer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Interior Designer</fullName>
            </value>
            <value>
                <fullName>Maisons</fullName>
            </value>
            <value>
                <fullName>Plumbers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>