force-app/main/default/objects/Engagement__c/fields/Notes_Discussion_Summary__c.field-meta.xml
<CustomField>
    <fullName>Notes_Discussion_Summary__c</fullName>
    <label>Notes /Discussion Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>