force-app/main/default/objects/Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Architect__c</columns>
    <columns>Date_and_time__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Notes_Discussion_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>